--- a/src/app/components/skills/skills.component.html
+++ b/src/app/components/skills/skills.component.html
@@ -1,22 +1,15 @@
 <div class="section">
     <div class="row">
-        <h1 id="title">Soft skills</h1>
-        <button type="button" class="btn btn-edit"><img src="./assets/images/edit.png" alt="btn-edit"></button>
+        <h1 id="title">Soft Skills</h1>
+        <app-edit-button (click)="edit()"></app-edit-button>
     </div>
 
-    <p>HTML</p>
-    <div class="container barra">
-        <div class="skills html">90%</div>
+    <div class="skills">
+        <div class="skill" *ngFor="let skills of skillsList">
+            <div class="skill-name">{{skills.name}}</div>
+            <div class="skill-bar">
+                <div class="skill-per" [attr.per]="skills.per" [ngStyle]="{width: skills.per}">
+                </div>
+            </div>
+        </div>
     </div>
-
-    <p>CSS</p>
-    <div class="container barra">
-        <div class="skills css">80%</div>
-    </div>
-
-    <p>JavaScript</p>
-    <div class="container barra">
-        <div class="skills js">65%</div>
-    </div>
-
-</div>
