--- a/src/app/components/experiencia/experiencia.component.html
+++ b/src/app/components/experiencia/experiencia.component.html
@@ -1,7 +1,9 @@
 <div class="section">
     <div class="row">
         <h1 id="title">Experiencia</h1>
-        <button type="button" class="btn btn-edit"><img src="./assets/images/edit.png" alt="btn-edit"></button>
+        <app-edit-button  
+            (btnClick)="edit()"
+        ></app-edit-button>
     </div>
     
     <ul class="items-list">
