--- a/src/app/components/perfil/perfil.component.html
+++ b/src/app/components/perfil/perfil.component.html
@@ -1,28 +1,34 @@
 <div class="section">
     <div class=row>
         <div class="col-md-2"></div>
+
         <div class="col-md-2" style="text-align: right;">
             <img [src]="miPortfolio.image" alt="perfil-logo" id="perfil-logo">
         </div>
+
         <div class="col-md-6">
             <h1>{{miPortfolio.name}}</h1>
+            <app-edit-button
+                (btnClick)="edit()"
+            ></app-edit-button>
             <p>{{miPortfolio.position}}</p>
             <p>{{miPortfolio.ubication}}</p>
             <button type="button" class="btn btn-primary">Contacto</button>
             <a href="https://drive.google.com/file/d/15ae8ehCIjlVZ0D4e5Rhg7eW7Z0PgLL-X/view?usp=share_link"
                 target="_blank" class="btn btn-info" role="button">Ver CV</a>
         </div>
-        <div class="col-md-2">
-            <button type="button" class="btn btn-edit"><img src="./assets/images/edit.png" alt="btn-edit"></button>
-        </div>
+
+        <div class="col-md-2"></div>
     </div>
     
     <div class="row">
         <div class="col-md-2"></div>
+
         <div class="col-md-8" style="padding-top: 2em;">
             <h2>Acerca de</h2>
             <p style="text-align: justify;">{{miPortfolio.about}}</p>
         </div>
+
         <div class="col-md-2"></div>
     </div>
 </div>
