--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,9 +1,9 @@
 <header>
-    <nav class="navbar">
+    <nav class="navbar" id="navbar">
 
-        <a href="#" class="arg-logo"><img src="./assets/images/argprog.png" width="20%" height="20%" alt="arg-logo"></a>
-        <a href="#" class="proyectos">Proyectos</a>
-        <a href="#" class="sobre-mi">Sobre mí</a>
+        <a href="#navbar" class="arg-logo"><img src="./assets/images/argprog.png" width="20%" height="20%" alt="arg-logo"></a>
+        <a href="#proyectos" class="proyectos">Proyectos</a>
+        <a href="#about" class="sobre-mi">Sobre mí</a>
         <a href="#" class="contacto">Contacto</a>
 
         <app-log-button 
