--- a/src/app/components/perfil/perfil.component.html
+++ b/src/app/components/perfil/perfil.component.html
@@ -1,4 +1,4 @@
-<div class="section">
+<div class="section" id="about">
     <div class=row>
         <div class="col-md-2"></div>
 
@@ -11,8 +11,8 @@
             <app-edit-button
                 (btnClick)="edit()"
             ></app-edit-button>
-            <p>{{miPortfolio.position}}</p>
-            <p>{{miPortfolio.ubication}}</p>
+            <p><span>{{miPortfolio.position}}</span></p>
+            <p>📍{{miPortfolio.ubication}}</p>
             <button type="button" class="btn btn-primary">Contacto</button>
             <a href="https://drive.google.com/file/d/15ae8ehCIjlVZ0D4e5Rhg7eW7Z0PgLL-X/view?usp=share_link"
                 target="_blank" class="btn btn-info" role="button">Ver CV</a>
