--- a/src/app/components/proyectos/proyectos.component.html
+++ b/src/app/components/proyectos/proyectos.component.html
@@ -1,4 +1,4 @@
-<div class="section">
+<div class="section" id="proyectos">
     <div class="row">
         <h1 id="title">Proyectos</h1>
         <app-edit-button
