--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -1,6 +1,14 @@
 .navbar,
-  .navbar a {
-    color: #ecf2ef;
-    background: #6920b0;
-    padding-right: 20px;
-  }
+.navbar a {
+  color: #ecf2ef;
+  background: #6920b0;
+  padding-right: 20px;
+
+}
+
+/*
+.navbar{
+  position: sticky;
+  top: 0;
+}
+*/
